# orion

./: .bazelrc  .gitattributes  .gitignore  .prettierignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
.aspect/workflows/: config.yaml
.github/workflows/: ci.yaml  release.yaml
bazel/include/: go.MODULE.bazel  python.MODULE.bazel
bazel/ts/: defs.bzl
cli/core/: BUILD.bazel
cli/core/gazelle/: BUILD.bazel
cli/pro/gazelle/tests/starzelle/: BUILD.bazel
common/cache/: README.md
common/treesitter/: parser.go
language/js/: MODULE.bazel
language/kotlin/: MODULE.bazel
language/orion/: MODULE.bazel
runner/: .bazelrc  BUILD.bazel  MODULE.bazel  go.mod  go.sum  runner.go
runner/git/: BUILD.bazel
runner/git/testing/: BUILD.bazel
runner/git/tests/: BUILD.bazel
runner/language/bzl/: BUILD.bazel
runner/tests/: BUILD.bazel  test.go
tools/format/: BUILD.bazel
