load("@bazel_gazelle//:def.bzl", "DEFAULT_LANGUAGES", "gazelle", "gazelle_binary")
load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:lang go
# gazelle:build_file_name BUILD.bazel

# Only update and do not create new BUILDs
# gazelle:generation_mode update_only

# Go config
# gazelle:go_naming_convention import
# gazelle:go_naming_convention_external import

# Use the gazelle bazel modules instead of go.mod modules
# gazelle:resolve_regexp go github.com/bazelbuild/bazel-gazelle/(.*) @bazel_gazelle//$1:go_default_library
# gazelle:resolve_regexp go github.com/bazel-contrib/rules_python/gazelle/(.*) @rules_python_gazelle_plugin//$1
# gazelle:resolve_regexp go github.com/bazelbuild/rules_go/(.*) @io_bazel_rules_go//$1
# gazelle:resolve_regexp go github.com/EngFlow/gazelle_cc/(.*) @gazelle_cc//$1
# gazelle:resolve_regexp go github.com/aspect-build/orion/(common|language)/(.*) @aspect_orion//$1/$2
# gazelle:resolve_regexp go github.com/aspect-build/orion/runner/(.*) //$1
# gazelle:resolve go github.com/bazelbuild/buildtools/build @com_github_bazelbuild_buildtools//build:go_default_library

gazelle_binary(
    name = "gazelle_bin",
    languages = [
        "@bazel_gazelle//language/go:go_default_library",
    ],
)

gazelle(
    name = "gazelle",
    # extra_args = ["-index=lazy"],
    gazelle = ":gazelle_bin",
)

go_library(
    name = "runner",
    srcs = ["runner.go"],
    importpath = "github.com/aspect-build/orion/runner",
    visibility = ["//visibility:public"],
    deps = [
        "//git",
        "//language/bzl",
        "//language/python",
        "//vendored/gazelle",
        "@aspect_orion//common/bazel",
        "@aspect_orion//common/ibp",
        "@aspect_orion//common/progress",
        "@aspect_orion//language/js",
        "@bazel_gazelle//config:go_default_library",
        "@bazel_gazelle//language:go_default_library",
        "@bazel_gazelle//language/go:go_default_library",
        "@bazel_gazelle//language/proto:go_default_library",
        "@gazelle_cc//language/cc",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel//attribute",
        "@io_opentelemetry_go_otel_trace//:trace",
        "@org_golang_x_term//:term",
    ],
)

go_library(
    name = "configure_lib",
    srcs = ["main.go"],
    importpath = "github.com/aspect-build/orion/",
    visibility = ["//visibility:private"],
    deps = [
        ":runner",
        "@aspect_orion//common/buildinfo",
        "@aspect_orion//common/ibp",
        "@aspect_orion//language/host",
        "@bazel_gazelle//language:go_default_library",
        "@in_gopkg_yaml_v3//:yaml_v3",
    ],
)

go_binary(
    name = "bin",
    embed = [":configure_lib"],
    visibility = ["//visibility:public"],
)
