module(
    name = "aspect_orion_runner",
    compatibility_level = 0,
)

bazel_dep(name = "aspect_orion", version = "0.0.0")
local_path_override(
    module_name = "aspect_orion",
    path = "..",
)

bazel_dep(name = "rules_go", version = "0.56.1", repo_name = "io_bazel_rules_go")  # must match go.mod
bazel_dep(name = "gazelle", version = "0.45.0", repo_name = "bazel_gazelle")  # must match go.mod
bazel_dep(name = "rules_python", version = "1.6.3")  # must match go.mod
bazel_dep(name = "rules_python_gazelle_plugin", version = "1.6.3")  # must match go.mod
bazel_dep(name = "gazelle_cc", version = "0.1.0")  # must match go.mod

# Override the gazelle version used locally to pre-release and apply orion patches
archive_override(
    module_name = "gazelle",
    integrity = "sha256-3NCjXwfTFu/htS5BEzcn/uKXSdjKEZhrYdC+zykbcUE=",
    patch_strip = 1,
    patches = [
        "//patches:bazelbuild_bazel-gazelle_aspect-cli.patch",
        "//git:gazelle-gitignore.patch",
    ],
    strip_prefix = "bazel-gazelle-0e862c3d81827441407c1e7c421831af511acfdb",
    urls = ["https://github.com/bazel-contrib/bazel-gazelle/archive/0e862c3d81827441407c1e7c421831af511acfdb.tar.gz"],
)

# Go modules
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_bazelbuild_bazel_gazelle", "com_github_bazelbuild_buildtools", "com_github_engflow_gazelle_cc", "com_github_go_git_go_git_v5", "com_github_pmezard_go_difflib", "in_gopkg_yaml_v3", "io_opentelemetry_go_otel", "io_opentelemetry_go_otel_trace", "org_golang_x_term")

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.nogo(nogo = "@aspect_orion//bazel/go:nogo")

####### Dev dependencies ########

# Go SDK version which can only be defined in a root MODULE
go_sdk2 = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk", dev_dependency = True)
go_sdk2.from_file(
    name = "go_sdk",
    go_mod = "//:go.mod",
)

# Go modules
go_deps2 = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps", dev_dependency = True)
go_deps2.module_override(
    patch_strip = 1,
    patches = [
        "//patches:bazelbuild_bazel-gazelle_aspect-cli.patch",
        "//git:gazelle-gitignore.patch",
    ],
    path = "github.com/bazelbuild/bazel-gazelle",
)
