go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.from_file(
    name = "go_sdk",
    go_mod = "//:go.mod",
)
go_sdk.nogo(nogo = "//bazel/go:nogo")
use_repo(go_sdk, "go_sdk")

# Gazelle to load go modules and generate BUILD files
archive_override(
    module_name = "gazelle",
    integrity = "sha256-3NCjXwfTFu/htS5BEzcn/uKXSdjKEZhrYdC+zykbcUE=",
    patch_strip = 1,
    patches = [
        "//cli/core/patches:bazelbuild_bazel-gazelle_aspect-cli.patch",
        "//cli/core/gazelle/runner/git:gazelle-gitignore.patch",
    ],
    strip_prefix = "bazel-gazelle-0e862c3d81827441407c1e7c421831af511acfdb",
    urls = ["https://github.com/bazel-contrib/bazel-gazelle/archive/0e862c3d81827441407c1e7c421831af511acfdb.tar.gz"],
)

# Go modules
go_deps = use_extension("@bazel_gazelle//:extensions.bzl", "go_deps")
go_deps.module_override(
    patch_strip = 1,
    patches = [
        "//cli/core/patches:bazelbuild_bazel-gazelle_aspect-cli.patch",
        "//cli/core/gazelle/runner/git:gazelle-gitignore.patch",
    ],
    path = "github.com/bazelbuild/bazel-gazelle",
)
