load("@aspect_gazelle//:gazelle.bzl", "gazelle_generation_test")
load("@gazelle//:def.bzl", "gazelle_binary")

# Disable the gazelle extensions
# gazelle:exclude .

gazelle_binary(
    name = "gazelle_bin",
    testonly = True,
    languages = [
        "@aspect_gazelle//language/js",
        "@aspect_gazelle//language/orion",
        "//git/testing",
    ],
    visibility = ["//visibility:private"],
)

[
    gazelle_generation_test(
        name = "%s_test" % t,
        dir = t,
        env = {
            "TEST_STARZELLE_PLUGINS": "%s/%s" % (
                package_name(),
                t,
            ),
        },
        gazelle_binary = ":gazelle_bin",
    )
    for t in [t.replace("/WORKSPACE", "") for t in glob(["*/WORKSPACE"])]
]
