load("@aspect_orion//:gazelle.bzl", "gazelle_generation_test")
load("@bazel_gazelle//:def.bzl", "gazelle_binary")

# Disable the gazelle extensions
# gazelle:exclude .

gazelle_binary(
    name = "gazelle_bin",
    testonly = True,
    languages = [
        "@aspect_orion//language/js",
        "//git/testing",
    ],
    visibility = ["//visibility:private"],
)

[
    gazelle_generation_test(
        name = "%s_test" % t,
        dir = t,
        gazelle_binary = ":gazelle_bin",
    )
    for t in [t.replace("/WORKSPACE", "") for t in glob(["*/WORKSPACE"])]
]
